--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ canvas{
 }
 .menu-screen{
   position: absolute;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   z-index:  1;
